--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         top: 0;
         bottom: 0;
         background: rgba(0, 0, 0, .5);
-        z-index: 999;
+        z-index: 333;
         color: white;
     }
 </style>
@@ -26,7 +26,7 @@
 <body>
   <div class="container">
    <div class="mask">
-    <h1>非正常全局遮罩</h1>
+    <h1>非全局遮罩</h1>
   </div>
   </div>
 </body>
